A reworked checkout to include changes to stage and wd.

--- a/slides.html
+++ b/slides.html
@@ -262,7 +262,7 @@
 
         -->
         <section class="slide">
-        <p class="bang">???</p>
+        <p class="bang">Expensive<br />Mini Bar</p>
         <h2>Visualizing Commands</h2>
         <h3>Checkout</h3>
         </p>Switches to a branch or commit by updating the <em>working directory</em> and <em>stage</em> to match that commit, and moving the <em>HEAD</em>.</p>
@@ -272,16 +272,29 @@
           <img src="presentation-images/Visualizing Commands - Checkout - 01.png" />
         </aside>
 
-        <aside class="static slide">
+         <aside class="static slide">
           <code>git checkout release</code>
           <img src="presentation-images/Visualizing Commands - Checkout - 02.png" />
         </aside>
 
+        <aside class="static slide">
+          <code>git checkout release ...</code>
+          <img src="presentation-images/Visualizing Commands - Checkout - 03.png" />
+        </aside>
+
+        <aside class="slide">
+        <h4>Other useful options</h4>
+        <ul>
+            <li><code>-m, --merge</code></li>
+            <li><code>-b &lt;new branch&gt; [&lt;start point&gt;]
+        </aside>
+
+
         </section>
         
         <section class="slide">
-        <p class="bang">???</p>
-        <h2>???</h2>
+        <p class="bang">Like a<br />Tree</p>
+        <h2>Branch</h2>
         </p>???</p>
         </section>
         
